--- a/kb/package.json
+++ b/kb/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "raneto-example",
+  "name": "knowledge-base",
   "version": "1.0.0",
   "description": "",
-  "main": "config.default.js",
+  "main": "config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "Ryan Lelek <ryanlelek@gmail.com>",
+  "author": "Elysium Project",
   "license": "ISC",
   "dependencies": {
     "raneto": "0.7.1",
