--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   "bin": "./bin/raneto",
   "main": "./app/index.js",
   "scripts": {
-    "start": "DEBUG=raneto node example/server.js",
-    "start_win": "set DEBUG=raneto&&node example/server.js",
+    "start": "DEBUG=raneto node kb/server.js",
+    "start_win": "set DEBUG=raneto&&node kb/server.js",
     "test": "npm run lint && npm run compile && mocha --reporter spec test/*.js",
     "postinstall": "npm update && npm run gulp",
     "gulp": "gulp",
