--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "url": "https://github.com/gilbitron/Raneto.git"
   },
   "bugs": "https://github.com/gilbitron/Raneto/issues",
-  "contributors": [ "https://github.com/gilbitron/Raneto/graphs/contributors" ],
+  "contributors": [
+    "https://github.com/gilbitron/Raneto/graphs/contributors"
+  ],
   "licenses": [
     {
       "type": "MIT",
@@ -70,6 +72,7 @@
     "pm2": "^2.4.2",
     "sanitize-filename": "^1.6.1",
     "serve-favicon": "^2.4.1",
+    "sha.js": "^2.4.8",
     "sitemap": "^1.11.1",
     "sweetalert": "^1.1.3",
     "underscore": "^1.8.3",
