--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elysium-support",
-  "version": "1.0",
+  "version": "1.0.0",
   "description": "Markdown powered Knowledgebase, based on Raneto",
   "author": "Elysium Project <elysium-project.org>",
   "license": "MIT",
@@ -30,8 +30,8 @@
   "bin": "./bin/raneto",
   "main": "./app/index.js",
   "scripts": {
-    "start": "DEBUG=raneto node kb/server.js",
-    "start_win": "set DEBUG=raneto&&node kb/server.js",
+    "start": "DEBUG=elysium-support node kb/server.js",
+    "start_win": "set DEBUG=elysium-support&&node kb/server.js",
     "test": "npm run lint && npm run compile && mocha --reporter spec test/*.js",
     "postinstall": "npm update && npm run gulp",
     "gulp": "gulp",
